deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: platform-registry-api-new
  name: mongodb
  namespace: platform-registry-dev
spec:
  ports:
  - name: mongodb
    port: 27017
  selector:
    statefulset: mongodb
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels:
    app: platform-registry-api-new
  name: mongodb-internal
  namespace: platform-registry-dev
spec:
  clusterIP: None
  ports:
  - name: mongodb
    port: 27017
  selector:
    statefulset: mongodb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: platform-registry-api-new
  name: mongodb
  namespace: platform-registry-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      statefulset: mongodb
  serviceName: mongodb-internal
  template:
    metadata:
      labels:
        app: platform-registry-api-new
        statefulset: mongodb
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - mongodb
            topologyKey: kubernetes.io/hostname
      containers:
      - args:
        - run-mongod
        image: image-registry.openshift-image-registry.svc:5000/bcgov/mongodb-36-ha:1
        imagePullPolicy: Always
        name: mongo-container
        ports:
        - containerPort: 27017
        readinessProbe:
          exec:
            command:
            - stat
            - /tmp/initialized
          failureThreshold: 10
          initialDelaySeconds: 10
          periodSeconds: 3
        resources:
          limits:
            cpu: 100m
            memory: 200Mi
          requests:
            cpu: 50m
            memory: 50Mi
        volumeMounts:
        - mountPath: /var/lib/mongodb/data
          name: mongo-data
  volumeClaimTemplates:
  - metadata:
      labels:
        app: platform-registry-api-new
        name: mongodb
      name: mongo-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1G
      storageClassName: netapp-block-standard
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mongo-replication
  namespace: platform-registry-dev
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          statefulset: mongodb
    ports:
    - port: 27017
      protocol: TCP
  podSelector:
    matchLabels:
      statefulset: mongodb
